<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/process_num"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:text="@string/processnumber_label" />

            <RadioGroup
                android:id="@+id/process_num_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/process_num_1"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/processnumber_1" />

                <RadioButton
                    android:id="@+id/process_num_10"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/processnumber_10" />
            </RadioGroup>

        </TableRow>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <Button
                android:id="@+id/connectButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/connect"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/resetButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reset"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img10"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:adjustViewBounds="true"
                tools:ignore="ContentDescription">
            </ImageView>

            <ImageView
                android:id="@+id/img09"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:adjustViewBounds="true"
                tools:ignore="ContentDescription">
            </ImageView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img08"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:adjustViewBounds="true"
                tools:ignore="ContentDescription">
            </ImageView>

            <ImageView
                android:id="@+id/img07"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:adjustViewBounds="true"
                tools:ignore="ContentDescription">
            </ImageView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img06"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:adjustViewBounds="true"
                tools:ignore="ContentDescription">
            </ImageView>

            <ImageView
                android:id="@+id/img05"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:adjustViewBounds="true"
                tools:ignore="ContentDescription">
            </ImageView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img04"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:adjustViewBounds="true"
                tools:ignore="ContentDescription">
            </ImageView>

            <ImageView
                android:id="@+id/img03"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:adjustViewBounds="true"
                tools:ignore="ContentDescription">
            </ImageView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img02"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:adjustViewBounds="true"
                tools:ignore="ContentDescription">
            </ImageView>

            <ImageView
                android:id="@+id/img01"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:adjustViewBounds="true"
                tools:ignore="ContentDescription">
            </ImageView>

        </LinearLayout>

    </TableLayout>

</LinearLayout>